RWD Updates From Meeting

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
 
-        <!-- LOGO 1 -->
+        <!-- LOGO -->
       	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School" alt="Cordova Elementary Home Page" border="0"></a></div>
 
           <!-- NAVIGATION 1 -->
@@ -41,7 +41,8 @@
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Cordova Elementary Home"><a href="#home">Home</a></li>
               	<li id="linkQuick" class="slideUnder" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary"><a href="#mission">Quick Links</a></li>
-              	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar Cordova Elementary"><a href="#news-events">Announcements/Calendar</a></li>
+              	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#news-events">Announcements</a></li>
+              	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#news-events">Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
@@ -50,7 +51,7 @@
             </section>
           </nav>
 
-          <div class="scsLogo"><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></div>
+          <div class="scsLogo"><a href="http://www.scsk12.org/" target="_blank"><img src="img/SCSLogo.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></div>
       </header>
 
 
@@ -113,7 +114,7 @@
             </div>
           </div>
           <div class="large-12 large-centered small-12">
-            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="#"> Read more...</a></span></p>
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="#"> Read&nbsp;more...</a></span></p>
           </div>
         </div>
       </div>
@@ -205,21 +206,8 @@
 
 
           <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
-              <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
-              <div class="newsArticle large-6 columns">
-                <h3>Spelling Bee</h3>
-                <p>Congratulations to the spelling bee winners.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-            <div class="large-6 small-12 columns">
-              <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
-              <div class="newsArticle large-6 columns">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
+            <div class="large-3 large-centered small-12 columns">
+              <a href="#" class="moreann">View Announcements ></a>
             </div>
           </div>
         </div>
@@ -281,6 +269,11 @@
                 <h3>Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                 <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-12 small-12 columns">
+              <div class="large-3 large-centered small-12 columns">
+                <a href="#" class="viewcalendar">View Calendar ></a>
               </div>
             </div>
           </div>
