--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <!-- LOGO -->
-      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School" alt="Cordova Elementary Home Page" border="0"></a></div>
+      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School Home Page" alt="Cordova Elementary Logo" border="0"></a></div>
 
           <!-- NAVIGATION 1 -->
           <nav class="top-bar large-9 small-9 columns" data-topbar>
@@ -51,7 +51,7 @@
             </section>
           </nav>
 
-          <div class="scsLogo"><a href="http://www.scsk12.org/" target="_blank"><img src="img/SCSLogo.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></div>
+          <div class="scsLogo"><a href="http://www.scsk12.org/" target="_blank"><img src="img/SCSLogo.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools Logo"></a></div>
       </header>
 
 
@@ -66,10 +66,10 @@
                   <div class="intro">
                     <h1>Cordova Elementary</h1>
                     <div class="graphicEle large-12 columns">
-                      <img src="img/graphicRed.png" border="0">
+                      <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
-                    <div class="opSchools"><a href="http://www.scsk12.org/optional/" target="_blank"><img src="img/opslogo2.png" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School www.scsk12.org/optional"></a></div>
+                    <div class="opSchools"><a href="http://www.scsk12.org/optional/" target="_blank"><img src="img/opslogo2.png" title="Cordova Elementary is an Optional School" alt="Optional Schools Logo"></a></div>
                   </div>
                 </div>
               </div>
@@ -107,10 +107,10 @@
       <div class="row">
         <div class="large-12 small-12 columns">
           <div class="large-12 large-centered small-12 columns">
-            <div class="icons large-3"><img src="img/missionIcon.png" alt="Mission Icon"></div>
+            <div class="icons large-3"><img src="img/missionIcon.png" alt="Clipboard Icon with red checkmark"></div>
             <h1 class="large-9">Our Mission</h1>
             <div class="graphicEle large-12 columns">
-              <img src="img/graphicRed.png" border="0">
+              <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
           <div class="large-12 large-centered small-12">
@@ -130,7 +130,7 @@
               <div class="icons large-3"><img src="img/linkIcon.png" alt="Link Icon"></div>
               <h1 class="large-9">Quick Links</h1>
               <div class="graphicEle large-12 columns">
-                <img src="img/graphicRed.png" border="0">
+                <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
             <div class="large-6 large-centered small-12 columns">
@@ -157,26 +157,26 @@
         <div class="large-12 small-12 columns">
 
           <!-- NEWS -->
-          <div id="article1" class="large-6 small-12 columns">
-            <div id="headContainer" class="large-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Announcements Icon"></div>
+          <div id="article1" class="large-6 medium-6 small-12 columns">
+            <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
+              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Newspaper Icon"></div>
               <h1 class="large-3 columns end">Announcements</h1>
               <div class="graphicEle large-12 columns">
-                <img src="img/graphicRed.png" border="0">
+                <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
             <div class="large-12 small-12 columns">
-              <div class="large-6 small-12 columns">
-                <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
-                <div class="newsArticle large-6 columns">
+              <div class="large-6 medium-6 small-12 columns">
+                <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+                <div class="newsArticle large-6 medium-6 columns">
                   <h3>Gold-Gain School</h3>
                   <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
                 </div>
               </div>
-              <div class="large-6 small-12 columns">
-                <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
-                <div class="newsArticle large-6 columns">
+              <div class="large-6 medium-6 small-12 columns">
+                <div class="newsImg large-6 medium-6 columns"><img src="img/img1.jpg" alt=""></div>
+                <div class="newsArticle large-6 medium-6 columns">
                   <h3>Robotics Team Wins</h3>
                   <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
@@ -186,17 +186,17 @@
 
 
           <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
-              <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
-              <div class="newsArticle large-6 columns">
+            <div class="large-6 medium-6 small-12 columns">
+              <div class="newsImg large-6 medium-6 columns"><img src="img/img3.jpg" alt=""></div>
+              <div class="newsArticle large-6 medium-6 columns">
                 <h3>Spelling Bee</h3>
                 <p>Congratulations to the spelling bee winners.</p>
                 <div class="readmore"><a href="#">Read more...</a></div>
               </div>
             </div>
-            <div class="large-6 small-12 columns">
-              <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
-              <div class="newsArticle large-6 columns">
+            <div class="large-6 medium-6 small-12 columns">
+              <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+              <div class="newsArticle large-6 medium-6 columns">
                 <h3>Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                 <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
@@ -207,23 +207,23 @@
 
           <div class="large-12 small-12 columns">
             <div class="large-3 large-centered small-12 columns">
-              <a href="#" class="moreann">View Announcements ></a>
+              <a href="#" class="moreann">More Announcements</a>
             </div>
           </div>
         </div>
 
 
         <!-- EVENTS -->
-        <div id="article2" class="large-6 small-12 columns">
-          <div id="headContainer2" class="large-6 large-centered small-12 columns">
+        <div id="article2" class="large-6 medium-6 small-12 columns">
+          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
             <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Calendar Icon"></div>
             <h1 class="large-3 columns end">Calendar</h1>
             <div class="graphicEle large-12 columns">
-              <img src="img/graphicRed.png" border="0">
+              <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
           <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
+            <div class="large-6 medium-6 small-12 columns">
               <div class="eventDate">
                 <h3>Aug</h3>
                 <h3>11</h3>
@@ -234,7 +234,7 @@
                 <div class="readmore"><a href="#">Read more...</a></div>
               </div>
             </div>
-            <div class="large-6 small-12 columns">
+            <div class="large-6 medium-6 small-12 columns">
               <div class="eventDate">
                 <h3>Aug</h3>
                 <h3>15</h3>
@@ -249,7 +249,7 @@
 
 
           <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
+            <div class="large-6 medium-6 small-12 columns">
               <div class="eventDate">
                 <h3>Aug</h3>
                 <h3>15</h3>
@@ -260,7 +260,7 @@
                 <div class="readmore"><a href="#">Read more...</a></div>
               </div>
             </div>
-            <div class="large-6 small-12 columns">
+            <div class="large-6 medium-6 small-12 columns">
               <div class="eventDate">
                 <h3>Aug</h3>
                 <h3>16</h3>
@@ -273,7 +273,7 @@
             </div>
             <div class="large-12 small-12 columns">
               <div class="large-3 large-centered small-12 columns">
-                <a href="#" class="viewcalendar">View Calendar ></a>
+                <a href="#" class="viewcalendar">Full Calendar</a>
               </div>
             </div>
           </div>
@@ -287,10 +287,10 @@
     <!-- GLOBAL LEADERS -->
     <section id="global">
       <div class="large-12">
-        <div class="icons"><img src="img/globalIcon.png" alt="Global Icon"></div>
+        <div class="icons"><img src="img/globalIcon.png" alt="Global icon" longdesc="Icon of half globe with 3 business men on other half"></div>
         <h1>Developing Global<br />Leaders and Learners</h1>
         <div class="graphicEle">
-          <img src="img/graphicRed.png" border="0">
+          <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
         </div>
       </div>
     </section>
@@ -305,10 +305,10 @@
           <!-- NEWS -->
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Resources Icon"></div>
+              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Resources Icon" longdesc="hammer laying cris-cross with qrench"></div>
               <h1 class="large-3 columns end">Resources</h1>
               <div class="graphicEle large-12 columns">
-                <img src="img/graphicRed.png" border="0">
+                <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
             <div class="large-12 small-12 columns">
@@ -323,10 +323,10 @@
         <!-- EVENTS -->
         <div id="article2" class="large-6 small-12 columns">
           <div id="headContainer2" class="large-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/twitIcon.png" alt="Events Icon"></div>
+            <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
             <h1 class="large-3 columns end">Twitter</h1>
             <div class="graphicEle large-12 columns">
-              <img src="img/graphicRed.png" border="0">
+              <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
           <div class="large-12 small-12 columns">
@@ -342,10 +342,10 @@
 
     <footer id="footer"class="row">
       <div id="footContact" class="large-12 columns">
-        <div class="icons"><img src="img/contactIcon.png" alt="Events Icon"></div>
+        <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
         <h1 class="">Contact</h1>
         <div class="graphicEle">
-          <img src="img/graphicRed.png" border="0">
+          <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
         </div>
       </div>
       <div id="footAddress" class="large-12 columns">
