Alt Tags and Font-Size

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <!-- GLOBAL LEADERS -->
     <section id="global">
       <div class="large-12">
-        <div class="icons"><img src="img/globalIcon.png" alt="Global icon" longdesc="Icon of half globe with 3 business men on other half"></div>
+        <div class="icons"><img src="img/globalIcon.png" alt="Icon of half globe with 3 business men on other half" longdesc=""></div>
         <h1>Developing Global<br />Leaders and Learners</h1>
         <div class="graphicEle">
           <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
@@ -305,7 +305,7 @@
           <!-- NEWS -->
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Resources Icon" longdesc="hammer laying cris-cross with qrench"></div>
+              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Hammer laying cris-cross with qrench" longdesc=""></div>
               <h1 class="large-3 columns end">Resources</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
