Mord RWD Updates

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
         <div class="large-12 small-12 columns">
 
           <!-- NEWS -->
-          <div id="article1" class="large-6 small-12 columns">
-            <div id="headContainer" class="large-6 large-centered small-12 columns">
+          <div id="article1" class="large-6 medium-6 small-12 columns">
+            <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Hammer laying cris-cross with qrench" longdesc=""></div>
               <h1 class="large-3 columns end">Resources</h1>
               <div class="graphicEle large-12 columns">
@@ -321,8 +321,8 @@
 
 
         <!-- EVENTS -->
-        <div id="article2" class="large-6 small-12 columns">
-          <div id="headContainer2" class="large-6 large-centered small-12 columns">
+        <div id="article2" class="large-6 medium-6 small-12 columns">
+          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
             <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
             <h1 class="large-3 columns end">Twitter</h1>
             <div class="graphicEle large-12 columns">
