Made Changes News Articles

--- a/index.html
+++ b/index.html
@@ -165,51 +165,98 @@
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
-            <div class="large-12 small-12 columns">
-              <div class="large-6 medium-6 small-12 columns">
-                <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
-                <div class="newsArticle large-6 medium-6 columns">
-                  <h3>Gold-Gain School</h3>
-                  <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
-                  <div class="readmore"><a href="#">Read more...</a></div>
+
+            <div class="article1Container">
+              <div class="imgSlide imgCurrSlide">
+                <div class="large-12 small-12 columns">
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Gold-Gain School</h3>
+                      <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img1.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Robotics Team Wins</h3>
+                      <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
+                </div>
+
+
+                <div class="large-12 small-12 columns">
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img3.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Spelling Bee</h3>
+                      <p>Congratulations to the spelling bee winners.</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Robotics Team Wins</h3>
+                      <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                      <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="large-6 medium-6 small-12 columns">
-                <div class="newsImg large-6 medium-6 columns"><img src="img/img1.jpg" alt=""></div>
-                <div class="newsArticle large-6 medium-6 columns">
-                  <h3>Robotics Team Wins</h3>
-                  <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                  <div class="readmore"><a href="#">Read more...</a></div>
+
+
+              <div class="imgSlide">
+                <div class="large-12 small-12 columns">
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img1.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Robotics Wins</h3>
+                      <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Gold-Gain School</h3>
+                      <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
+                </div>
+
+
+                <div class="large-12 small-12 columns">
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Robotics Team</h3>
+                      <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                      <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
+                    </div>
+                  </div>
+                  <div class="large-6 medium-6 small-12 columns">
+                    <div class="newsImg large-6 medium-6 columns"><img src="img/img3.jpg" alt=""></div>
+                    <div class="newsArticle large-6 medium-6 columns">
+                      <h3>Spelling</h3>
+                      <p>Congratulations to the spelling bee winners.</p>
+                      <div class="readmore"><a href="#">Read more...</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-          </div>
+            </div>
 
 
-          <div class="large-12 small-12 columns">
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="newsImg large-6 medium-6 columns"><img src="img/img3.jpg" alt=""></div>
-              <div class="newsArticle large-6 medium-6 columns">
-                <h3>Spelling Bee</h3>
-                <p>Congratulations to the spelling bee winners.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
+            <div id="moreArtBTN" class="large-12 small-12 columns">
+              <div class="large-3 large-centered small-12 columns">
+                <div class="moreann">More Announcements</div>
               </div>
             </div>
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="newsImg large-6 medium-6 columns"><img src="img/img2.jpg" alt=""></div>
-              <div class="newsArticle large-6 medium-6 columns">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="large-12 small-12 columns">
-            <div class="large-3 large-centered small-12 columns">
-              <a href="#" class="moreann">More Announcements</a>
-            </div>
-          </div>
         </div>
 
 
