Made More Updates

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
             <div id="moreArtBTN" class="large-12 small-12 columns">
               <div class="large-3 large-centered small-12 columns">
-                <div class="moreann">More Announcements</div>
+                <div class="moreann slideUnder">More Announcements</div>
               </div>
             </div>
         </div>
