--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
             <div id="moreArtBTN" class="large-12 small-12 columns">
               <div class="large-3 large-centered small-12 columns">
                 <div class="moreann slideUnder">More Announcements</div>
+                <div id="moreannMobile" class="slideUnder">More Announcements</div>
               </div>
             </div>
         </div>
