--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
 
             <div id="moreArtBTN" class="large-12 small-12 columns">
               <div class="large-3 large-centered small-12 columns">
-                <div class="moreann slideUnder">More Announcements</div>
-                <div id="moreannMobile" class="slideUnder">More Announcements</div>
+                <div class="moreann">More Announcements</div>
+                <div id="moreannMobile">More Announcements</div>
               </div>
             </div>
         </div>
