Added Updates to Links

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Cordova Elementary Home"><a href="#home">Home</a></li>
               	<li id="linkQuick" class="slideUnder" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary"><a href="#mission">Quick Links</a></li>
-              	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#news-events">Announcements</a></li>
-              	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#news-events">Calendar</a></li>
+              	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#article1">Announcements</a></li>
+              	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#article2">Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
@@ -396,15 +396,15 @@
           <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
         </div>
       </div>
-      <div id="footAddress" class="large-12 columns">
-        <div class="large-3 columns">
+      <div id="footAddress" class="large-12 small-12 columns">
+        <div class="large-3 small-12 columns">
           <h2>Cordova Elementary</h2>
           <p>750 North Sanga<br />Cordova, TN 38018</p>
         </div>
         <div class="large-3 columns">
           <img src="img/divider.png">
         </div>
-        <div class="large-3 columns end">
+        <div class="large-3 small-12 columns end">
           <p><span>Phone:</span> (901) 416-1700</p>
           <p><span>Fax:</span> (901) 416-1701</p>
           <p><span>School Hours:</span> 8:15 AM - 3:15 PM</p>
