Made Changes From Meeting

--- a/index.html
+++ b/index.html
@@ -133,16 +133,22 @@
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
-            <div class="large-6 large-centered small-12 columns">
+            <div class="large-12 large-centered small-12 columns">
               <div class="large-3 small-12 columns">
-                <a href="#"><h2 alt="TRANSCRIPTS">TRANSCRIPTS</h2></a>
-                <a href="#"><h2 alt="UNIFORM/DRESS CODE">UNIFORM/DRESS CODE</h2></a>
-                <a href="#"><h2 alt="LUNCH MENU">LUNCH MENU</h2></a>
+                <a href="#"><h2 alt="REGISTRATION">REGISTRATION</h2></a>
+                <a href="#"><h2 alt="POWERSCHOOL">POWERSCHOOL</h2></a>
               </div>
               <div class="large-3 small-12 columns">
-                <a href="#"><h2 alt="GRADE SCALE">GRADE SCALE</h2></a>
-                <a href="#"><h2 alt="PARENT_CONNECT">PARENT_CONNECT</h2></a>
-                <a href="#"><h2 alt="SUPPLY LIST">SUPPLY LIST</h2></a>
+              <a href="#"><h2 alt="2017-18 CALENDAR">2017-18 CALENDAR</h2></a>
+                <a href="#"><h2 alt="MENUS">MENUS</h2></a>
+              </div>
+              <div class="large-3 small-12 columns">
+                <a href="#"><h2 alt="TRANSPORTATION">TRANSPORTATION</h2></a>
+                <a href="#"><h2 alt="STUDENT HANDBOOK">STUDENT HANDBOOK</h2></a>
+              </div>
+              <div class="large-3 small-12 columns">
+                <a href="#"><h2 alt="DRESS CODE">DRESS CODE</h2></a>
+                <a href="#"><h2 alt="REPORT SAFETY TIPS">REPORT SAFETY TIPS</h2></a>
               </div>
             </div>
           </div>
@@ -359,11 +365,17 @@
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
-            <div class="large-12 small-12 columns">
-              <a href="#"><h2>TRANSCRIPTS</h2></a>
-              <a href="#"><h2>UNIFORM POLICY/DRESS CODE</h2></a>
-              <a href="#"><h2>LUNCH MENU</h2></a>
+            <div class="large-12 large-centered small-12 columns">
+              <a href="#"><h2>HEALTH CLINICS</h2></a>
+              <a href="#"><h2>TNREADY HELPS</h2></a>
               <a href="#"><h2>KHAN ACADEMY</h2></a>
+              <a href="#"><h2>SUPPLY LIST</h2></a>
+              <a href="#"><h2>EDMODO</h2></a>
+            </div>
+            <div class="large-12 small-12 columns">
+              <div class="large-3 large-centered small-12 columns">
+                <a href="#" class="moreRes">More Resources</a>
+              </div>
             </div>
           </div>
 
@@ -372,7 +384,7 @@
         <div id="article2" class="large-6 medium-6 small-12 columns">
           <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
             <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
-            <h1 class="large-3 columns end">Twitter</h1>
+            <h1 class="large-3 columns end">Social</h1>
             <div class="graphicEle large-12 columns">
               <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
