Added Images and Updated JS and CSS

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
       <div id="bck">
           <ul id="bckRotate">
-            <li><img src="img/ce_HeroImg2.jpg"></li>
-            <li><img src="img/ce_HeroImg.jpg"></li>
-            <li><img src="img/ce_HeroImg3.jpg"></li>
-            <li><img src="img/ce_HeroImg4.jpg"></li>
+            <li><img src="img/ce_img1.jpg"></li>
+            <li><img src="img/ce_img2.jpg"></li>
+            <li><img src="img/ce_img3.jpg"></li>
+            <li><img src="img/ce_img4.jpg"></li>
           </ul>
       </div>
     </section>
@@ -347,6 +347,7 @@
           <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
         </div>
       </div>
+      <div class="overlay"></div>
     </section>
 
 
@@ -366,14 +367,18 @@
               </div>
             </div>
             <div class="large-12 large-centered small-12 columns">
-              <a href="#"><h2>HEALTH CLINICS</h2></a>
-              <a href="#"><h2>TNREADY HELPS</h2></a>
-              <a href="#"><h2>KHAN ACADEMY</h2></a>
-              <a href="#"><h2>SUPPLY LIST</h2></a>
-              <a href="#"><h2>EDMODO</h2></a>
+              <div class="large-6 small-12 columns">
+                <a href="#"><h2>HEALTH CLINICS</h2></a>
+                <a href="#"><h2>TNREADY HELPS</h2></a>
+                <a href="#"><h2>KHAN ACADEMY</h2></a>
+              </div>
+              <div class="large-6 small-12 columns">
+                <a href="#"><h2>SUPPLY LIST</h2></a>
+                <a href="#"><h2>EDMODO</h2></a>
+              </div>
             </div>
             <div class="large-12 small-12 columns">
-              <div class="large-3 large-centered small-12 columns">
+              <div class="large-12 large-centered small-12 columns">
                 <a href="#" class="moreRes">More Resources</a>
               </div>
             </div>
@@ -411,15 +416,16 @@
       <div id="footAddress" class="large-12 small-12 columns">
         <div class="large-3 small-12 columns">
           <h2>Cordova Elementary</h2>
-          <p>750 North Sanga<br />Cordova, TN 38018</p>
+          <p>750 North Sanga<br />Cordova, TN 38018<br /><span>School Hours:</span> 8:15 AM - 3:15 PM</p>
         </div>
         <div class="large-3 columns">
           <img src="img/divider.png">
         </div>
         <div class="large-3 small-12 columns end">
-          <p><span>Phone:</span> (901) 416-1700</p>
-          <p><span>Fax:</span> (901) 416-1701</p>
-          <p><span>School Hours:</span> 8:15 AM - 3:15 PM</p>
+          <p><span>Kimbrelle B. Lewis, Principal</span><br />
+          <span>Email:</span> lewiskb@scsk12.org<br />
+          <span>Phone:</span> (901) 416-1700<br />
+          <span>Fax:</span> (901) 416-1701</p>
         </div>
       </div>
     </footer>
