Added Two Pages

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
               	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#article1">Announcements</a></li>
               	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#article2">Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
-              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
-                <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
+              	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a></li>
+                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
               </ul>
             </section>
