--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
               	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a></li>
                 <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a></li>
-             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
+             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerMain">Contact</a></li>
               </ul>
             </section>
           </nav>
@@ -405,7 +405,7 @@
 
 
 
-    <footer id="footer"class="row">
+    <footer id="footerMain" class="footer row">
       <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
         <h1 class="">Contact</h1>
